--- a/github/workflows/main.yml
+++ b/github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Python Test
+name: C++ Test
 
 on: [push, pull_request]
 
@@ -8,12 +8,15 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-    - name: Set up Python
-      uses: actions/setup-python@v2
-      with:
-        python-version: '3.8'
+
     - name: Install dependencies
-      run: pip install -r requirements.txt
+      run: sudo apt-get install -y g++ cmake
+
+    - name: Configure CMake
+      run: cmake -S . -B build
+
+    - name: Build
+      run: cmake --build build
+
     - name: Run tests
-      run: |
-        pytest tests/
+      run: ./build/tests/test_solution
