--- a/github/workflows/main.yml
+++ b/github/workflows/main.yml
@@ -1,10 +1,34 @@
-name: C++ Test
+name: C++ Problem Generation and Test
 
-on: [push, pull_request]
+on:
+  push:
+    branches:
+      - main
+  workflow_dispatch:
 
 jobs:
+  generate:
+    runs-on: ubuntu-latest
+
+    steps:
+    - uses: actions/checkout@v2
+
+    - name: Set up Python
+      uses: actions/setup-python@v2
+      with:
+        python-version: '3.8'
+
+    - name: Install dependencies
+      run: pip install openai
+
+    - name: Generate Problem
+      env:
+        OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
+      run: python generate_problem.py
+
   build:
     runs-on: ubuntu-latest
+    needs: generate
 
     steps:
     - uses: actions/checkout@v2
