--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,6 +26,14 @@ jobs:
         OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
       run: python generate_problem.py
 
+    - name: Commit generated problem
+      run: |
+        git config --global user.name 'github-actions[bot]'
+        git config --global user.email 'github-actions[bot]@users.noreply.github.com'
+        git add README.md src/solution.cpp tests/test_solution.cpp
+        git commit -m "Add generated problem"
+        git push origin main
+
   build:
     runs-on: ubuntu-latest
     needs: generate
