--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,7 +37,8 @@ jobs:
         git config --global user.email 'github-actions[bot]@users.noreply.github.com'
         git add README.md src/solution.cpp tests/test_solution.cpp
         git commit -m "Add generated problem"
-        # Pull the latest changes from the remote to avoid conflicts
-        git pull --rebase origin main
+        # Pull the latest changes and use 'theirs' strategy to resolve conflicts automatically
+        git pull --rebase origin main || git rebase --abort
+        git pull origin main --strategy-option theirs
         # Push the changes
         git push https://x-access-token:${ACTIONS_TOKEN}@github.com/${{ github.repository }}.git HEAD:main
